used 'Raleway' font, changed some colours and fixed up some spacing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
 }
 
 body {
@@ -35,26 +37,28 @@ body {
   grid-area: 1 / 1 / -1 / 2;
   grid-template-rows: auto auto 1fr;
   color: #ffffff;
-  background-color: #4391ce;
-  padding: 1rem;
+  background-color: #0085d8;
+  padding: 2rem;
 }
 
 .sidebar .heading {
   display: flex;
   align-items: center;
   color: #ffffff;
-  background-color: #4391ce;
-  gap: 1rem;
+  margin-left: 1rem;
 }
 
 .sidebar .heading p {
   margin: 0;
   font-size: 2rem;
-  font-weight: bold;
+  font-weight: 700;
+}
+
+.sidebar .menu {
+  margin-left: 1rem;
 }
 
 .sidebar .menu ul {
-  /* display: flex; */
   padding: 0;
 }
 
@@ -71,7 +75,7 @@ body {
 
 .sidebar .menu ul li p {
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 700;
   cursor: pointer;
 }
 
@@ -135,7 +139,8 @@ body {
 
 .header .profile .profilename {
   margin: 0;
-  font-size: 32px;
+  font-size: 2rem;
+  font-weight: 700;
   cursor: pointer;
 }
 
@@ -159,14 +164,15 @@ body {
 .header .greeting .greet {
   margin: 0;
   align-self: flex-end;
-  font-weight: bold;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 
 .header .greeting .greetuser {
   margin: 0;
   align-self: flex-start;
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-size: 2.5rem;
+  font-weight: 700;
 }
 
 /* buttons */
@@ -180,11 +186,11 @@ body {
 .buttons button {
   cursor: pointer;
   color: white;
-  background-color: #4391ce;
+  background-color: #0085d8;
   border: none;
   width: 10rem;
   height: 3rem;
-  font-weight: bold;
+  font-weight: 700;
   border-radius: 25px;
   font-size: 1rem;
 }
